--- a/grc/templates/personal-details/statutory-declaration-date.html
+++ b/grc/templates/personal-details/statutory-declaration-date.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/text-input.html" as textInput %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}When did you sign your statutory declaration?{% endblock %}
+{% block title %}{{ _('When did you sign your statutory declaration?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
@@ -22,13 +24,12 @@
                     <fieldset class="govuk-fieldset" role="group" aria-describedby="fieldset-hint">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                             <h1 class="govuk-fieldset__heading">
-                                When did you sign your statutory declaration?
+                                {{ _('When did you sign your statutory declaration?') }}
                             </h1>
                         </legend>
 
                         <div class="govuk-hint" id="fieldset-hint">
-                            Enter the date you signed your gender recognition statutory declaration in front of someone
-                            authorised to administer oaths.
+                            {{ _('Enter the date you signed your gender recognition statutory declaration in front of someone authorised to administer oaths.') }}
                         </div>
 
                         {% if form.errors %}
@@ -49,7 +50,7 @@
                             <div class="govuk-date-input__item">
                                 <div class="govuk-form-group">
                                     <label for="statutory_declaration_date_day" class="govuk-label govuk-date-input__label">
-                                        Day
+                                        {{ _('Day') }}
                                     </label>
                                     <input type="text"
                                            id="statutory_declaration_date_day" name="statutory_declaration_date_day"
@@ -62,7 +63,7 @@
                             <div class="govuk-date-input__item">
                                 <div class="govuk-form-group">
                                     <label for="statutory_declaration_date_month" class="govuk-label govuk-date-input__label">
-                                        Month
+                                        {{ _('Month') }}
                                     </label>
                                     <input type="text"
                                            id="statutory_declaration_date_month" name="statutory_declaration_date_month"
@@ -75,7 +76,7 @@
                             <div class="govuk-date-input__item">
                                 <div class="govuk-form-group">
                                     <label for="statutory_declaration_date_year" class="govuk-label govuk-date-input__label">
-                                        Year
+                                        {{ _('Year') }}
                                     </label>
                                     <input type="text"
                                            id="statutory_declaration_date_year" name="statutory_declaration_date_year"
@@ -89,14 +90,7 @@
                     </fieldset>
                 </div>
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Save and continue
-                    </button>
-                    <a href="{{ url_for('taskList.index') }}" class="govuk-link govuk-link--no-visited-state">
-                        Return to task list
-                    </a>
-                </div>
+                {{ continue.renderForSaveAndContinue() }}
             </form>
 
         </div>
