--- a/grc/templates/personal-details/previous-names-check.html
+++ b/grc/templates/personal-details/previous-names-check.html
@@ -20,11 +20,11 @@
                 {{ _('If you have ever changed your name to reflect your gender') }}
             </h1>
             <p class="govuk-body">
-                {{ _('You will need to upload documents that show this.') }}
-                {{ _('If you have changed your name more than once, we will need to see documents for each instance.') }}
+                {{ _('You will need to upload documents that show this') }}.
+                {{ _('If you have changed your name more than once, we will need to see documents for each instance') }}.
             </p>
             <p class="govuk-body">
-                {{ _('We ask for this so we can match your birth records after you receive a Gender Recognition Certificate.') }}
+                {{ _('We ask for this so we can match your birth records after you receive a Gender Recognition Certificate') }}.
             </p>
             <p class="govuk-body govuk-!-margin-bottom-2">
                 {{ _('These documents are likely to be:') }}
