add missing translation

--- a/grc/templates/personal-details/transition-date.html
+++ b/grc/templates/personal-details/transition-date.html
@@ -30,7 +30,7 @@
 
                         <div class="govuk-hint" id="fieldset-hint">
                             {{ _('Enter the month and year of your transition') }}.
-                            {{ ('For example, this could be when you changed your name by deed poll, or when you told friends or family you were changing your gender') }}.
+                            {{ _('For example, this could be when you changed your name by deed poll, or when you told friends or family you were changing your gender') }}.
                             {{ _('The date must be the same as on your gender recognition statutory declaration') }}.
                             {{ _('It must be at least 2 years before you submit your application for a Gender Recognition Certificate') }}.
                         </div>
