mark content for trans correctly

--- a/grc/templates/personal-details/contact-dates.html
+++ b/grc/templates/personal-details/contact-dates.html
@@ -34,9 +34,7 @@
                     radiosOptions={
                         'questionIsPageHeading': true,
                         'hintOptions': {
-                            'htmlOrText': _('For example, if you are away on holiday.') _('The Gender Recognition Panel
-                                           admin team will not contact you during this time - but other government
-                                           departments such as HMRC might still contact you.')
+                            'htmlOrText': _('For example, if you are away on holiday. The Gender Recognition Panel admin team will not contact you during this time - but other government departments such as HMRC might still contact you.')
                         },
                         'conditionalOptions': [
                             ('SINGLE_DATE',
